# timescaledb-python

./: .bumpversion.cfg  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yaml  workflow.yaml
docs/: django-support-plan.md  django.md  timescale-recent-updates.md
sample_project/: main.py
samples/: README.md  __init__.py  compose.yaml  conftest.py  requirements.txt
samples/_shared/: __init__.py  db.py
samples/continuous_aggregates_rollups/: README.md  __init__.py  main.py  models.py  pipeline.py  test_continuous_aggregates_rollups.py
samples/crypto_ohlcv_candles/: README.md  __init__.py  main.py  models.py  pipeline.py  test_crypto_ohlcv_candles.py
samples/devops_metrics_gapfill/: README.md  __init__.py  main.py  models.py  pipeline.py  test_devops_metrics_gapfill.py
samples/django_timeseries_dashboard/: README.md  manage.py
samples/django_timeseries_dashboard/dashboard/: settings.py  urls.py
samples/django_timeseries_dashboard/readings/: apps.py  models.py  views.py
samples/ecommerce_clickstream_retention/: README.md  __init__.py  main.py  models.py  pipeline.py  test_ecommerce_clickstream_retention.py
samples/energy_metering_compression/: README.md  __init__.py  main.py  models.py  pipeline.py  test_energy_metering_compression.py
samples/fastapi_timeseries_api/: README.md  __init__.py  app.py  main.py  models.py  test_fastapi_timeseries_api.py
samples/fleet_gps_tracking/: README.md  __init__.py  main.py  models.py  pipeline.py  test_fleet_gps_tracking.py
samples/hypercore_columnstore/: README.md  __init__.py  main.py  models.py  pipeline.py  test_hypercore_columnstore.py
samples/iot_sensor_network/: README.md  __init__.py  main.py  models.py  pipeline.py  test_iot_sensor_network.py
samples/weather_lifecycle_full/: README.md  __init__.py  main.py  models.py  pipeline.py  test_weather_lifecycle_full.py
src/timescaledb/: __init__.py  defaults.py  dialect.py  metadata.py  models.py
src/timescaledb/chunks/: __init__.py  drop.py  show.py  sql.py  utils.py
src/timescaledb/compression/: sync.py  validators.py
src/timescaledb/continuous_aggregates/: __init__.py  alter.py  create.py  policies.py  refresh.py  sql.py
src/timescaledb/django/: __init__.py  apps.py
src/timescaledb/hypercore/: __init__.py  add.py  convert.py  enable.py  extractors.py  list.py  remove.py  sql.py  sync.py
tests/: conftest.py  test_chunks.py  test_continuous_aggregates.py  test_coverage_edges.py  test_create_table_with_hypertable.py  test_dialect.py  test_django_support.py  test_engine.py  test_hypercore.py  test_hyperfunctions.py  test_jobs.py  test_manual_hypertable.py  test_queries.py  test_retention_policy.py  test_unit_compression.py  test_unit_continuous_aggregates.py  test_unit_hypercore.py  test_unit_misc.py  test_validators.py
tests/requirements/: compile.py  py311.txt  py312.txt  py313.txt  py314.txt  requirements.in
(+20 files in other folders)
