[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timescaledb"
version = "0.2.0"
description = "TimescaleDB is a Python Client based on SQLModel and SQLAlchemy for high-performance real-time analytics time-series data."
readme = "README.md"
authors = [
  { name = "Justin Mitchel", email = "justin@codingforentrepreneurs.com" },
]
license = { text = "MIT" }
keywords = ["TimescaleDB", "SQLModel", "SQLAlchemy", "Time-Series", "Analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.11"
dependencies = [
    "sqlmodel>=0.0.8",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
]
django = [
    "Django>=5.2",
]

[project.urls]
Homepage = "https://github.com/jmitchel3/timescaledb-python"
Repository = "https://github.com/jmitchel3/timescaledb-python"

[project.entry-points."sqlalchemy.dialects"]
"timescaledb" = "timescaledb.dialect:TimescaledbPsycopg2Dialect"
"timescaledb.psycopg2" = "timescaledb.dialect:TimescaledbPsycopg2Dialect"
"timescaledb.psycopg" = "timescaledb.dialect:TimescaledbPsycopgDialect"
"timescaledb.asyncpg" = "timescaledb.dialect:TimescaledbAsyncpgDialect"


[tool.hatch.build.targets.wheel]
packages = ["src/timescaledb"]

[tool.isort]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """
    --strict-config
    --strict-markers
    """
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true
source = ["timescaledb"]
omit = [
    "*/migrations/*",
    "*/admin.py",
    "tests/*",
]

[tool.coverage.paths]
# The canonical (first) path must exist in the checkout where `coverage
# combine`/`report` runs, otherwise tox-recorded paths remap to a
# non-existent location and report fails with "No source for code".
source = [
    "src/timescaledb",
    "timescaledb",
    "*/timescaledb",
    ".tox/*/lib/python*/site-packages/timescaledb",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
warn_unreachable = true
